Update published html files, committed by org-page.

--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>Wiki Index - manue1&#39;s blog</title>
+    <title>Wiki Index - manue1&#39;s site</title>
     <meta charset="utf-8" />
     <meta name="author" content="manue1" />
     <link rel="stylesheet" href="/media/css/main.css" type="text/css">
@@ -10,8 +10,8 @@
   <body class="container">
     <div>
       <header class="masthead">
-        <h1 class="masthead-title"><a href="/">manue1&#39;s blog</a></h1>
-        <p>xxxxxx</p>
+        <h1 class="masthead-title"><a href="/">manue1&#39;s site</a></h1>
+        <p>^_^ just for simaple</p>
         <ul>
           <li><a href="/blog/">Blog</a></li>
           <li><a href="/wiki/">Wiki</a></li>
@@ -22,7 +22,7 @@
         </ul>
         <form method="get" id="searchform" action="//www.google.com/search">
           <input type="text" class="field" name="q" id="s" placeholder="Search">
-          <input type="hidden" name="as_sitesearch" value="blog.manue1.site">
+          <input type="hidden" name="as_sitesearch" value="www.manue1.site">
         </form>
       </header>
     </div>
