--- a/wiki/untitled/index.html
+++ b/wiki/untitled/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>Untitled - manue1&#39;s blog</title>
+    <title>Untitled - manue1&#39;s site</title>
     <meta charset="utf-8" />
     <meta name="author" content="manue1" />
     <link rel="stylesheet" href="/media/css/main.css" type="text/css">
@@ -10,8 +10,8 @@
   <body class="container">
     <div>
       <header class="masthead">
-        <h1 class="masthead-title"><a href="/">manue1&#39;s blog</a></h1>
-        <p>xxxxxx</p>
+        <h1 class="masthead-title"><a href="/">manue1&#39;s site</a></h1>
+        <p>^_^ just for simaple</p>
         <ul>
           <li><a href="/blog/">Blog</a></li>
           <li><a href="/wiki/">Wiki</a></li>
@@ -22,7 +22,7 @@
         </ul>
         <form method="get" id="searchform" action="//www.google.com/search">
           <input type="text" class="field" name="q" id="s" placeholder="Search">
-          <input type="hidden" name="as_sitesearch" value="blog.manue1.site">
+          <input type="hidden" name="as_sitesearch" value="www.manue1.site">
         </form>
       </header>
     </div>
@@ -34,12 +34,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc3c5d1b">1. 4k</a></li>
+<li><a href="#org0c0fb4c">1. 4k</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc3c5d1b" class="outline-2">
-<h2 id="orgc3c5d1b"><span class="section-number-2">1</span> 4k</h2>
+<div id="outline-container-org0c0fb4c" class="outline-2">
+<h2 id="org0c0fb4c"><span class="section-number-2">1</span> 4k</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 1.张志华-机器想学习导论 上海交通大学
