--- a/wiki/untitled/index.html
+++ b/wiki/untitled/index.html
@@ -34,12 +34,12 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf1241ed">1. 4k</a></li>
+<li><a href="#orgf736bc4">1. 4k</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf1241ed" class="outline-2">
-<h2 id="orgf1241ed"><span class="section-number-2">1</span> 4k</h2>
+<div id="outline-container-orgf736bc4" class="outline-2">
+<h2 id="orgf736bc4"><span class="section-number-2">1</span> 4k</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 1.张志华-机器想学习导论 上海交通大学
