--- a/wiki/index.html
+++ b/wiki/index.html
@@ -31,22 +31,18 @@
         <h1>Wiki Index</h1>
         <ul class="org-ul">
           <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/note-mongo">note-Mongo</a></li>
+          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/note-mysql">note-mysql</a></li>
+          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/note-data-structure">note-data-structure</a></li>
+          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/note-elasticsearch-使用记录">note-elasticsearch-使用记录</a></li>
+          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/note-emacs-使用记录">note-emacs-使用记录</a></li>
+          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/note-git-使用记录">note-git-使用记录</a></li>
+          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/note-java-基础知识">note-java-基础知识</a></li>
+          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/note-jvm-深入理解java虚拟机">note-jvm-深入理解Java虚拟机</a></li>
           <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
           <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
           <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
           <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
-          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
+          <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/note-options-期权、期货及其他衍生产品">note-options-期权、期货及其他衍生产品</a></li>
           <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
           <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
           <li>2018-06-03&nbsp;&nbsp;»&nbsp;&nbsp;<a href="/wiki/untitled/">Untitled</a></li>
