Update published html files, committed by org-page.

--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-org84c00bd" class="outline-2">
-<h2 id="org84c00bd">git 独奏</h2>
-<div class="outline-text-2" id="text-org84c00bd">
+<div id="outline-container-org1793681" class="outline-2">
+<h2 id="org1793681">git 独奏</h2>
+<div class="outline-text-2" id="text-org1793681">
 </div>
-<div id="outline-container-orga3c9830" class="outline-3">
-<h3 id="orga3c9830">git 初始化</h3>
-<div class="outline-text-3" id="text-orga3c9830">
+<div id="outline-container-org9e358e1" class="outline-3">
+<h3 id="org9e358e1">git 初始化</h3>
+<div class="outline-text-3" id="text-org9e358e1">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-org948d20f" class="outline-3">
-<h3 id="org948d20f">git 暂存区</h3>
-<div class="outline-text-3" id="text-org948d20f">
+<div id="outline-container-org755150f" class="outline-3">
+<h3 id="org755150f">git 暂存区</h3>
+<div class="outline-text-3" id="text-org755150f">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-orgcce9c41" class="outline-3">
-<h3 id="orgcce9c41">git reset 重置</h3>
-<div class="outline-text-3" id="text-orgcce9c41">
+<div id="outline-container-orgcabbcd7" class="outline-3">
+<h3 id="orgcabbcd7">git reset 重置</h3>
+<div class="outline-text-3" id="text-orgcabbcd7">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-orgb984ee1" class="outline-3">
-<h3 id="orgb984ee1">git 检出</h3>
-<div class="outline-text-3" id="text-orgb984ee1">
+<div id="outline-container-orgcff149d" class="outline-3">
+<h3 id="orgcff149d">git 检出</h3>
+<div class="outline-text-3" id="text-orgcff149d">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc01df02" class="outline-3">
-<h3 id="orgc01df02">git 恢复进度</h3>
-<div class="outline-text-3" id="text-orgc01df02">
+<div id="outline-container-orge8f5e7d" class="outline-3">
+<h3 id="orge8f5e7d">git 恢复进度</h3>
+<div class="outline-text-3" id="text-orge8f5e7d">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-org588df97" class="outline-3">
-<h3 id="org588df97">git 基础操作</h3>
-<div class="outline-text-3" id="text-org588df97">
+<div id="outline-container-orgfa31078" class="outline-3">
+<h3 id="orgfa31078">git 基础操作</h3>
+<div class="outline-text-3" id="text-orgfa31078">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-org5b4ee4d" class="outline-3">
-<h3 id="org5b4ee4d">git tools</h3>
-<div class="outline-text-3" id="text-org5b4ee4d">
+<div id="outline-container-orgb5974fb" class="outline-3">
+<h3 id="orgb5974fb">git tools</h3>
+<div class="outline-text-3" id="text-orgb5974fb">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-org08885ac" class="outline-3">
-<h3 id="org08885ac">改变历史</h3>
-<div class="outline-text-3" id="text-org08885ac">
+<div id="outline-container-org28dab47" class="outline-3">
+<h3 id="org28dab47">改变历史</h3>
+<div class="outline-text-3" id="text-org28dab47">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-orgd6c736d" class="outline-3">
-<h3 id="orgd6c736d">git克隆</h3>
-<div class="outline-text-3" id="text-orgd6c736d">
+<div id="outline-container-orgcb9bd0f" class="outline-3">
+<h3 id="orgcb9bd0f">git克隆</h3>
+<div class="outline-text-3" id="text-orgcb9bd0f">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-org2f4c9b8" class="outline-2">
-<h2 id="org2f4c9b8">git 和声</h2>
-<div class="outline-text-2" id="text-org2f4c9b8">
+<div id="outline-container-org6734dc8" class="outline-2">
+<h2 id="org6734dc8">git 和声</h2>
+<div class="outline-text-2" id="text-org6734dc8">
 </div>
-<div id="outline-container-orgaa8a236" class="outline-3">
-<h3 id="orgaa8a236">git 工作协调</h3>
-<div class="outline-text-3" id="text-orgaa8a236">
+<div id="outline-container-org1b9a3c0" class="outline-3">
+<h3 id="org1b9a3c0">git 工作协调</h3>
+<div class="outline-text-3" id="text-org1b9a3c0">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-org8e7b2b8" class="outline-3">
-<h3 id="org8e7b2b8">git 冲突解决</h3>
-<div class="outline-text-3" id="text-org8e7b2b8">
+<div id="outline-container-orge84039f" class="outline-3">
+<h3 id="orge84039f">git 冲突解决</h3>
+<div class="outline-text-3" id="text-orge84039f">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-org172776e" class="outline-2">
-<h2 id="org172776e"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-org172776e">
+<div id="outline-container-org9835b49" class="outline-2">
+<h2 id="org9835b49"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-org9835b49">
 </div>
-<div id="outline-container-orgcce7661" class="outline-3">
-<h3 id="orgcce7661">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-orgcce7661">
+<div id="outline-container-org2eff677" class="outline-3">
+<h3 id="org2eff677">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-org2eff677">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
