Update published html files, committed by org-page.

--- a/wiki/note-spark-use/index.html
+++ b/wiki/note-spark-use/index.html
@@ -35,9 +35,9 @@
 <p>
 Spark快速大数据分析[美] 卡劳（Holden Karau）
 </p>
-<div id="outline-container-org26130fb" class="outline-2">
-<h2 id="org26130fb">what is spark</h2>
-<div class="outline-text-2" id="text-org26130fb">
+<div id="outline-container-orga29aae6" class="outline-2">
+<h2 id="orga29aae6">what is spark</h2>
+<div class="outline-text-2" id="text-orga29aae6">
 <p>
 spark 是一个用来实现快速而通用的集群计算的平台
 </p>
@@ -66,16 +66,16 @@ python shell / scala shell</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org1e87ed4" class="outline-2">
-<h2 id="org1e87ed4">RDD</h2>
-<div class="outline-text-2" id="text-org1e87ed4">
+<div id="outline-container-orgc2848b4" class="outline-2">
+<h2 id="orgc2848b4">RDD</h2>
+<div class="outline-text-2" id="text-orgc2848b4">
 <p>
 RDD(resilient distributed dataset)
 </p>
 </div>
-<div id="outline-container-orgb441ff7" class="outline-3">
-<h3 id="orgb441ff7">RDD基础</h3>
-<div class="outline-text-3" id="text-orgb441ff7">
+<div id="outline-container-org6ef4da2" class="outline-3">
+<h3 id="org6ef4da2">RDD基础</h3>
+<div class="outline-text-3" id="text-org6ef4da2">
 <p>
 Spark中的RDD是一个不可变的分布式对象集合
 </p>
@@ -83,30 +83,30 @@ Spark中的RDD是一个不可变的分布式对象集合
 </div>
 </div>
 
-<div id="outline-container-orgfde0ae3" class="outline-2">
-<h2 id="orgfde0ae3">spark use</h2>
-<div class="outline-text-2" id="text-orgfde0ae3">
+<div id="outline-container-orgbebc347" class="outline-2">
+<h2 id="orgbebc347">spark use</h2>
+<div class="outline-text-2" id="text-orgbebc347">
 </div>
-<div id="outline-container-org81df701" class="outline-3">
-<h3 id="org81df701">spark base</h3>
-<div class="outline-text-3" id="text-org81df701">
+<div id="outline-container-org4fb8dba" class="outline-3">
+<h3 id="org4fb8dba">spark base</h3>
+<div class="outline-text-3" id="text-org4fb8dba">
 <p>
 rdd(resilient distributed dataset)
 </p>
 </div>
 </div>
-<div id="outline-container-org6447551" class="outline-3">
-<h3 id="org6447551">spark install</h3>
-<div class="outline-text-3" id="text-org6447551">
+<div id="outline-container-org6229bd2" class="outline-3">
+<h3 id="org6229bd2">spark install</h3>
+<div class="outline-text-3" id="text-org6229bd2">
 <p>
 函数式编程
 shell下执行:paste
 </p>
 </div>
 </div>
-<div id="outline-container-orge26d69a" class="outline-3">
-<h3 id="orge26d69a">spark shell</h3>
-<div class="outline-text-3" id="text-orge26d69a">
+<div id="outline-container-orgb1c93e2" class="outline-3">
+<h3 id="orgb1c93e2">spark shell</h3>
+<div class="outline-text-3" id="text-orgb1c93e2">
 <p>
 bin/spark-shell
 </p>
@@ -126,9 +126,9 @@ filter()</li>
 </div>
 </div>
 
-<div id="outline-container-org6efec37" class="outline-3">
-<h3 id="org6efec37">idea spark scala</h3>
-<div class="outline-text-3" id="text-org6efec37">
+<div id="outline-container-org422ec72" class="outline-3">
+<h3 id="org422ec72">idea spark scala</h3>
+<div class="outline-text-3" id="text-org422ec72">
 <p>
 scala 项目手动打包
 删除scala 和spark的包
@@ -144,25 +144,25 @@ sbt 构建项目 需要等待sbt版本下载好才会生成src目录
 </div>
 </div>
 
-<div id="outline-container-org9bfd106" class="outline-3">
-<h3 id="org9bfd106">idea spark java</h3>
-<div class="outline-text-3" id="text-org9bfd106">
+<div id="outline-container-orgb9fa771" class="outline-3">
+<h3 id="orgb9fa771">idea spark java</h3>
+<div class="outline-text-3" id="text-orgb9fa771">
 <ol class="org-ol">
 <li>jre 1.5 换成1.8</li>
 </ol>
 </div>
 </div>
-<div id="outline-container-orgf771c9f" class="outline-3">
-<h3 id="orgf771c9f">rdd &amp; dataframe</h3>
+<div id="outline-container-org3cbbb47" class="outline-3">
+<h3 id="org3cbbb47">rdd &amp; dataframe</h3>
 </div>
 </div>
-<div id="outline-container-org78af864" class="outline-2">
-<h2 id="org78af864">docker spark</h2>
-<div class="outline-text-2" id="text-org78af864">
+<div id="outline-container-orgdff9a67" class="outline-2">
+<h2 id="orgdff9a67">docker spark</h2>
+<div class="outline-text-2" id="text-orgdff9a67">
 </div>
-<div id="outline-container-org26ca0f0" class="outline-3">
-<h3 id="org26ca0f0">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
-<div class="outline-text-3" id="text-org26ca0f0">
+<div id="outline-container-org396aa9a" class="outline-3">
+<h3 id="org396aa9a">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
+<div class="outline-text-3" id="text-org396aa9a">
 <p>
 refer : <a href="http://blog.csdn.net/gogo_yao/article/details/76863201">http://blog.csdn.net/gogo_yao/article/details/76863201</a>
 </p>
@@ -213,17 +213,17 @@ cd <i>root</i>.local/spark-2.2.0-bin-without-hadoop/sbin; sh start-all.sh
 </ol>
 </div>
 </div>
-<div id="outline-container-org0a8e5a2" class="outline-3">
-<h3 id="org0a8e5a2">docker search spark</h3>
-<div class="outline-text-3" id="text-org0a8e5a2">
+<div id="outline-container-orgdaff805" class="outline-3">
+<h3 id="orgdaff805">docker search spark</h3>
+<div class="outline-text-3" id="text-orgdaff805">
 <p>
 docker pull sequenceiq/spark:1.6.0
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org6c20492" class="outline-2">
-<h2 id="org6c20492">docker hbase</h2>
+<div id="outline-container-org5ccedcf" class="outline-2">
+<h2 id="org5ccedcf">docker hbase</h2>
 </div>
 
 </div>
