--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-orgbb2bffe" class="outline-2">
-<h2 id="orgbb2bffe">git 独奏</h2>
-<div class="outline-text-2" id="text-orgbb2bffe">
+<div id="outline-container-org37bd7ec" class="outline-2">
+<h2 id="org37bd7ec">git 独奏</h2>
+<div class="outline-text-2" id="text-org37bd7ec">
 </div>
-<div id="outline-container-orgc33300c" class="outline-3">
-<h3 id="orgc33300c">git 初始化</h3>
-<div class="outline-text-3" id="text-orgc33300c">
+<div id="outline-container-orga03d60a" class="outline-3">
+<h3 id="orga03d60a">git 初始化</h3>
+<div class="outline-text-3" id="text-orga03d60a">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-org4c4acc2" class="outline-3">
-<h3 id="org4c4acc2">git 暂存区</h3>
-<div class="outline-text-3" id="text-org4c4acc2">
+<div id="outline-container-org0f86f8c" class="outline-3">
+<h3 id="org0f86f8c">git 暂存区</h3>
+<div class="outline-text-3" id="text-org0f86f8c">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-orgb2fd7f8" class="outline-3">
-<h3 id="orgb2fd7f8">git reset 重置</h3>
-<div class="outline-text-3" id="text-orgb2fd7f8">
+<div id="outline-container-org9d2e698" class="outline-3">
+<h3 id="org9d2e698">git reset 重置</h3>
+<div class="outline-text-3" id="text-org9d2e698">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-orgcc54441" class="outline-3">
-<h3 id="orgcc54441">git 检出</h3>
-<div class="outline-text-3" id="text-orgcc54441">
+<div id="outline-container-org394571d" class="outline-3">
+<h3 id="org394571d">git 检出</h3>
+<div class="outline-text-3" id="text-org394571d">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-org174609e" class="outline-3">
-<h3 id="org174609e">git 恢复进度</h3>
-<div class="outline-text-3" id="text-org174609e">
+<div id="outline-container-org31e47f5" class="outline-3">
+<h3 id="org31e47f5">git 恢复进度</h3>
+<div class="outline-text-3" id="text-org31e47f5">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-org18d9a0b" class="outline-3">
-<h3 id="org18d9a0b">git 基础操作</h3>
-<div class="outline-text-3" id="text-org18d9a0b">
+<div id="outline-container-org13cb193" class="outline-3">
+<h3 id="org13cb193">git 基础操作</h3>
+<div class="outline-text-3" id="text-org13cb193">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-org1191e06" class="outline-3">
-<h3 id="org1191e06">git tools</h3>
-<div class="outline-text-3" id="text-org1191e06">
+<div id="outline-container-org857e425" class="outline-3">
+<h3 id="org857e425">git tools</h3>
+<div class="outline-text-3" id="text-org857e425">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-org938b5d3" class="outline-3">
-<h3 id="org938b5d3">改变历史</h3>
-<div class="outline-text-3" id="text-org938b5d3">
+<div id="outline-container-orgba26da9" class="outline-3">
+<h3 id="orgba26da9">改变历史</h3>
+<div class="outline-text-3" id="text-orgba26da9">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-orgf3923c8" class="outline-3">
-<h3 id="orgf3923c8">git克隆</h3>
-<div class="outline-text-3" id="text-orgf3923c8">
+<div id="outline-container-org3d5775c" class="outline-3">
+<h3 id="org3d5775c">git克隆</h3>
+<div class="outline-text-3" id="text-org3d5775c">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-orgdb3643a" class="outline-2">
-<h2 id="orgdb3643a">git 和声</h2>
-<div class="outline-text-2" id="text-orgdb3643a">
+<div id="outline-container-org14f1019" class="outline-2">
+<h2 id="org14f1019">git 和声</h2>
+<div class="outline-text-2" id="text-org14f1019">
 </div>
-<div id="outline-container-orgc427aa9" class="outline-3">
-<h3 id="orgc427aa9">git 工作协调</h3>
-<div class="outline-text-3" id="text-orgc427aa9">
+<div id="outline-container-org3b500b6" class="outline-3">
+<h3 id="org3b500b6">git 工作协调</h3>
+<div class="outline-text-3" id="text-org3b500b6">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-orga9adeba" class="outline-3">
-<h3 id="orga9adeba">git 冲突解决</h3>
-<div class="outline-text-3" id="text-orga9adeba">
+<div id="outline-container-org83bd7f7" class="outline-3">
+<h3 id="org83bd7f7">git 冲突解决</h3>
+<div class="outline-text-3" id="text-org83bd7f7">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-org8fb28af" class="outline-2">
-<h2 id="org8fb28af"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-org8fb28af">
+<div id="outline-container-org1bc68f2" class="outline-2">
+<h2 id="org1bc68f2"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-org1bc68f2">
 </div>
-<div id="outline-container-org9b31aad" class="outline-3">
-<h3 id="org9b31aad">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-org9b31aad">
+<div id="outline-container-org7b7f432" class="outline-3">
+<h3 id="org7b7f432">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-org7b7f432">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
