--- a/wiki/note-git-使用记录/index.html
+++ b/wiki/note-git-使用记录/index.html
@@ -35,13 +35,13 @@
 <p>
 蒋鑫. Git权威指南 机械工业出版社. Kindle 版本. 
 </p>
-<div id="outline-container-org41bebba" class="outline-2">
-<h2 id="org41bebba">git 独奏</h2>
-<div class="outline-text-2" id="text-org41bebba">
+<div id="outline-container-org12cb5c8" class="outline-2">
+<h2 id="org12cb5c8">git 独奏</h2>
+<div class="outline-text-2" id="text-org12cb5c8">
 </div>
-<div id="outline-container-orgfa2c149" class="outline-3">
-<h3 id="orgfa2c149">git 初始化</h3>
-<div class="outline-text-3" id="text-orgfa2c149">
+<div id="outline-container-orgef4b928" class="outline-3">
+<h3 id="orgef4b928">git 初始化</h3>
+<div class="outline-text-3" id="text-orgef4b928">
 <ul class="org-ul">
 <li><p>
 git init 
@@ -97,9 +97,9 @@ git config &lt;session&gt;.&lt;key&gt;
 </ul>
 </div>
 </div>
-<div id="outline-container-org0672359" class="outline-3">
-<h3 id="org0672359">git 暂存区</h3>
-<div class="outline-text-3" id="text-org0672359">
+<div id="outline-container-orgebb5c3e" class="outline-3">
+<h3 id="orgebb5c3e">git 暂存区</h3>
+<div class="outline-text-3" id="text-orgebb5c3e">
 
 <div class="figure">
 <p><img src="http://7xpyfe.com1.z0.glb.clouddn.com/2017101515080826245091.png" alt="2017101515080826245091.png" />
@@ -169,9 +169,9 @@ git stash
 </ul>
 </div>
 </div>
-<div id="outline-container-orgd71ddd7" class="outline-3">
-<h3 id="orgd71ddd7">git reset 重置</h3>
-<div class="outline-text-3" id="text-orgd71ddd7">
+<div id="outline-container-orgde7900f" class="outline-3">
+<h3 id="orgde7900f">git reset 重置</h3>
+<div class="outline-text-3" id="text-orgde7900f">
 <ol class="org-ol">
 <li>git reset HEAD&lt;path&gt;  相当于取消 git add &lt;paths&gt; 操作</li>
 
@@ -193,9 +193,9 @@ git reset --hard master@{2}  重置master所有位置为两次改变之前的值
 </div>
 </div>
 
-<div id="outline-container-org9cbb82a" class="outline-3">
-<h3 id="org9cbb82a">git 检出</h3>
-<div class="outline-text-3" id="text-org9cbb82a">
+<div id="outline-container-org21a94e4" class="outline-3">
+<h3 id="org21a94e4">git 检出</h3>
+<div class="outline-text-3" id="text-org21a94e4">
 <ul class="org-ul">
 <li><p>
 git checkout branch_name
@@ -208,9 +208,9 @@ git branch -v
 </ul>
 </div>
 </div>
-<div id="outline-container-orge30c1e1" class="outline-3">
-<h3 id="orge30c1e1">git 恢复进度</h3>
-<div class="outline-text-3" id="text-orge30c1e1">
+<div id="outline-container-org0a3f1a8" class="outline-3">
+<h3 id="org0a3f1a8">git 恢复进度</h3>
+<div class="outline-text-3" id="text-org0a3f1a8">
 <ul class="org-ul">
 <li><p>
 git stash
@@ -239,9 +239,9 @@ git stash branch &lt;branchname&gt;  基于进度创建分支
 </div>
 </div>
 
-<div id="outline-container-orgb7732c1" class="outline-3">
-<h3 id="orgb7732c1">git 基础操作</h3>
-<div class="outline-text-3" id="text-orgb7732c1">
+<div id="outline-container-org1f470dc" class="outline-3">
+<h3 id="org1f470dc">git 基础操作</h3>
+<div class="outline-text-3" id="text-org1f470dc">
 <ul class="org-ul">
 <li><p>
 删除文件
@@ -325,9 +325,9 @@ git archive -o partial.tar HEAD src doc  只归档两个文件夹
 </div>
 </div>
 
-<div id="outline-container-orgfc49909" class="outline-3">
-<h3 id="orgfc49909">git tools</h3>
-<div class="outline-text-3" id="text-orgfc49909">
+<div id="outline-container-org5b8e2f4" class="outline-3">
+<h3 id="org5b8e2f4">git tools</h3>
+<div class="outline-text-3" id="text-org5b8e2f4">
 <p>
 版本库浏览器能更好看提交关系图
 </p>
@@ -367,9 +367,9 @@ git bisect start
 </div>
 </div>
 
-<div id="outline-container-org215b4ed" class="outline-3">
-<h3 id="org215b4ed">改变历史</h3>
-<div class="outline-text-3" id="text-org215b4ed">
+<div id="outline-container-org1ab6926" class="outline-3">
+<h3 id="org1ab6926">改变历史</h3>
+<div class="outline-text-3" id="text-org1ab6926">
 <ul class="org-ul">
 <li><p>
 单步悔棋
@@ -394,9 +394,9 @@ git commit -m "new reason "
 </div>
 </div>
 
-<div id="outline-container-org87ea2fc" class="outline-3">
-<h3 id="org87ea2fc">git克隆</h3>
-<div class="outline-text-3" id="text-org87ea2fc">
+<div id="outline-container-orgf94b72a" class="outline-3">
+<h3 id="orgf94b72a">git克隆</h3>
+<div class="outline-text-3" id="text-orgf94b72a">
 <ul class="org-ul">
 <li><p>
 git clone
@@ -420,13 +420,13 @@ git clone --mirror &lt;rep&gt; dir
 </div>
 </div>
 
-<div id="outline-container-org974e9be" class="outline-2">
-<h2 id="org974e9be">git 和声</h2>
-<div class="outline-text-2" id="text-org974e9be">
+<div id="outline-container-org47c9c1a" class="outline-2">
+<h2 id="org47c9c1a">git 和声</h2>
+<div class="outline-text-2" id="text-org47c9c1a">
 </div>
-<div id="outline-container-orga163681" class="outline-3">
-<h3 id="orga163681">git 工作协调</h3>
-<div class="outline-text-3" id="text-orga163681">
+<div id="outline-container-orgbcab0ab" class="outline-3">
+<h3 id="orgbcab0ab">git 工作协调</h3>
+<div class="outline-text-3" id="text-orgbcab0ab">
 <ul class="org-ul">
 <li>支持的协议
 智能协议: 数据传输过程中有清晰的进度显示,按需传输，传输量小，速度快 (ssh,git,file//)  
@@ -466,9 +466,9 @@ git push
 </div>
 
 
-<div id="outline-container-org4c3df6e" class="outline-3">
-<h3 id="org4c3df6e">git 冲突解决</h3>
-<div class="outline-text-3" id="text-org4c3df6e">
+<div id="outline-container-orgb612599" class="outline-3">
+<h3 id="orgb612599">git 冲突解决</h3>
+<div class="outline-text-3" id="text-orgb612599">
 <p>
 git merge
 </p>
@@ -532,13 +532,13 @@ git add / git reset
 </div>
 </div>
 
-<div id="outline-container-orgb14bb85" class="outline-2">
-<h2 id="orgb14bb85"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
-<div class="outline-text-2" id="text-orgb14bb85">
+<div id="outline-container-org2f06c93" class="outline-2">
+<h2 id="org2f06c93"><a href="http://mazhuang.org/wiki/git/">common questions</a></h2>
+<div class="outline-text-2" id="text-org2f06c93">
 </div>
-<div id="outline-container-org25f45c4" class="outline-3">
-<h3 id="org25f45c4">git ls-files 乱码问题</h3>
-<div class="outline-text-3" id="text-org25f45c4">
+<div id="outline-container-org561bd85" class="outline-3">
+<h3 id="org561bd85">git ls-files 乱码问题</h3>
+<div class="outline-text-3" id="text-org561bd85">
 <p>
 在 <code>~/.gitconfig</code> 中添加如下内容
 </p>
