--- a/wiki/note-spark-use/index.html
+++ b/wiki/note-spark-use/index.html
@@ -35,9 +35,9 @@
 <p>
 Spark快速大数据分析[美] 卡劳（Holden Karau）
 </p>
-<div id="outline-container-orgf9f26a4" class="outline-2">
-<h2 id="orgf9f26a4">what is spark</h2>
-<div class="outline-text-2" id="text-orgf9f26a4">
+<div id="outline-container-org077235a" class="outline-2">
+<h2 id="org077235a">what is spark</h2>
+<div class="outline-text-2" id="text-org077235a">
 <p>
 spark 是一个用来实现快速而通用的集群计算的平台
 </p>
@@ -66,16 +66,16 @@ python shell / scala shell</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orge87b702" class="outline-2">
-<h2 id="orge87b702">RDD</h2>
-<div class="outline-text-2" id="text-orge87b702">
+<div id="outline-container-orga4f061d" class="outline-2">
+<h2 id="orga4f061d">RDD</h2>
+<div class="outline-text-2" id="text-orga4f061d">
 <p>
 RDD(resilient distributed dataset)
 </p>
 </div>
-<div id="outline-container-orge9b3d00" class="outline-3">
-<h3 id="orge9b3d00">RDD基础</h3>
-<div class="outline-text-3" id="text-orge9b3d00">
+<div id="outline-container-orgbac5d3d" class="outline-3">
+<h3 id="orgbac5d3d">RDD基础</h3>
+<div class="outline-text-3" id="text-orgbac5d3d">
 <p>
 Spark中的RDD是一个不可变的分布式对象集合
 </p>
@@ -83,30 +83,30 @@ Spark中的RDD是一个不可变的分布式对象集合
 </div>
 </div>
 
-<div id="outline-container-orged574fb" class="outline-2">
-<h2 id="orged574fb">spark use</h2>
-<div class="outline-text-2" id="text-orged574fb">
+<div id="outline-container-orgf62d9c8" class="outline-2">
+<h2 id="orgf62d9c8">spark use</h2>
+<div class="outline-text-2" id="text-orgf62d9c8">
 </div>
-<div id="outline-container-orgc920bb5" class="outline-3">
-<h3 id="orgc920bb5">spark base</h3>
-<div class="outline-text-3" id="text-orgc920bb5">
+<div id="outline-container-org1471694" class="outline-3">
+<h3 id="org1471694">spark base</h3>
+<div class="outline-text-3" id="text-org1471694">
 <p>
 rdd(resilient distributed dataset)
 </p>
 </div>
 </div>
-<div id="outline-container-org7eefa57" class="outline-3">
-<h3 id="org7eefa57">spark install</h3>
-<div class="outline-text-3" id="text-org7eefa57">
+<div id="outline-container-org0870727" class="outline-3">
+<h3 id="org0870727">spark install</h3>
+<div class="outline-text-3" id="text-org0870727">
 <p>
 函数式编程
 shell下执行:paste
 </p>
 </div>
 </div>
-<div id="outline-container-org17ffff6" class="outline-3">
-<h3 id="org17ffff6">spark shell</h3>
-<div class="outline-text-3" id="text-org17ffff6">
+<div id="outline-container-orgd7f8425" class="outline-3">
+<h3 id="orgd7f8425">spark shell</h3>
+<div class="outline-text-3" id="text-orgd7f8425">
 <p>
 bin/spark-shell
 </p>
@@ -126,9 +126,9 @@ filter()</li>
 </div>
 </div>
 
-<div id="outline-container-org76f1ac0" class="outline-3">
-<h3 id="org76f1ac0">idea spark scala</h3>
-<div class="outline-text-3" id="text-org76f1ac0">
+<div id="outline-container-org488a04e" class="outline-3">
+<h3 id="org488a04e">idea spark scala</h3>
+<div class="outline-text-3" id="text-org488a04e">
 <p>
 scala 项目手动打包
 删除scala 和spark的包
@@ -144,25 +144,25 @@ sbt 构建项目 需要等待sbt版本下载好才会生成src目录
 </div>
 </div>
 
-<div id="outline-container-org2855ece" class="outline-3">
-<h3 id="org2855ece">idea spark java</h3>
-<div class="outline-text-3" id="text-org2855ece">
+<div id="outline-container-orgf23585c" class="outline-3">
+<h3 id="orgf23585c">idea spark java</h3>
+<div class="outline-text-3" id="text-orgf23585c">
 <ol class="org-ol">
 <li>jre 1.5 换成1.8</li>
 </ol>
 </div>
 </div>
-<div id="outline-container-org5cefcd0" class="outline-3">
-<h3 id="org5cefcd0">rdd &amp; dataframe</h3>
+<div id="outline-container-orgda3df5f" class="outline-3">
+<h3 id="orgda3df5f">rdd &amp; dataframe</h3>
 </div>
 </div>
-<div id="outline-container-org265757f" class="outline-2">
-<h2 id="org265757f">docker spark</h2>
-<div class="outline-text-2" id="text-org265757f">
+<div id="outline-container-org4d15b42" class="outline-2">
+<h2 id="org4d15b42">docker spark</h2>
+<div class="outline-text-2" id="text-org4d15b42">
 </div>
-<div id="outline-container-org11b5fbc" class="outline-3">
-<h3 id="org11b5fbc">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
-<div class="outline-text-3" id="text-org11b5fbc">
+<div id="outline-container-orgb596e3f" class="outline-3">
+<h3 id="orgb596e3f">docker for mac install spark 2.2.0 + hadoop 2.8.0</h3>
+<div class="outline-text-3" id="text-orgb596e3f">
 <p>
 refer : <a href="http://blog.csdn.net/gogo_yao/article/details/76863201">http://blog.csdn.net/gogo_yao/article/details/76863201</a>
 </p>
@@ -213,17 +213,17 @@ cd <i>root</i>.local/spark-2.2.0-bin-without-hadoop/sbin; sh start-all.sh
 </ol>
 </div>
 </div>
-<div id="outline-container-org6710623" class="outline-3">
-<h3 id="org6710623">docker search spark</h3>
-<div class="outline-text-3" id="text-org6710623">
+<div id="outline-container-orgb2368a9" class="outline-3">
+<h3 id="orgb2368a9">docker search spark</h3>
+<div class="outline-text-3" id="text-orgb2368a9">
 <p>
 docker pull sequenceiq/spark:1.6.0
 </p>
 </div>
 </div>
 </div>
-<div id="outline-container-org19da863" class="outline-2">
-<h2 id="org19da863">docker hbase</h2>
+<div id="outline-container-orge38c46d" class="outline-2">
+<h2 id="orge38c46d">docker hbase</h2>
 </div>
 
 </div>
